www/css/screen/top-row.css
.top-row .menu {
    margin-top: 8vh;
    margin-right: 5px;
    width: 13vw;
    display: flex;
    flex-direction: column;
}

.menu .item {
    margin-bottom: 20px;
    font-size: 3vh;
    cursor: pointer;
}

.menu .third-party-sm {
    display: flex;
}

.third-party-sm .sm-click {
    height: 2em;
    width: 2em;
    margin: 0 10px 0 0;
    cursor: pointer;
    display: inline-block;
    overflow: hidden;
}

.third-party-sm img {
    width: 100%;
    height: 100%;
}

.middle {
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
    width: 60vw;
}

.middle .title {
    font-size: xx-large;
}

.about-me {
    padding: 1vh 3vw;
}

.about-me .points {
    display: flex;
}

.about-me .point {
    font-size: large;
    padding: 15px;
    border-left: 1px solid;
    border-right: 1px solid;
    align-self: baseline;
    font-weight: 900;
}

.avatar {
    height: 20vw;
    width: 20vw;
    border-radius: 50%;
}

.about-me .bio {
    font-weight: 600;
    margin-top: 3vh;
}

.top-row .name {
    display: none;
}

